# Arduino

./: 20240707_Gachon_Uni.ino  232.ino  30.ino  Henes_PowerPack_ver8.ino  KukMin_0817.ino  README.md  SerialEvent.ino  array.ino  contorl_pid_ma.ino  union.ino
20230307/LED1/: LED1.ino
20230314/: Untitled Sketch.fzz  sonar1.fzz  sonar3.fzz
20230314/sonar3/: sonar3.ino
20230321/: sonar3_motor.fzz  sonar3_motor.ino
20230328/newping3_motor3/newping3_motor/: newping3_motor.ino
20230328/sketch_mar28a/: sketch_mar28a.ino
20230330/homework fold/newping_led/: newping_led.ino
20230407/maze1/: maze1.ino
20230904/: 20230904.ino
20230911/: 20230911.ino
20230925/: TSL1401.ino
20231023/: 20231023.ino
20240709_MovingAverageFilter/: 20240709_MovingAverageFilter.ino
Capacitor/: Capacitor charging voltage graph.xlsx  Capacitor.vcxproj  main.cpp
Capacitor/x64/Debug/: Capacitor.exe.recipe  Capacitor.ilk  vc143.idb
Capacitor/x64/Debug/Capacitor.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Capacitor.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Debug/: Debug.ino
F1Tenth_1__ver.1/: F1Tenth_1__ver.1.ino
I2C/: I2C.ino
I2C_2/: I2C_2.ino
IMU/: IMU.sln
IMU/IMU/: IMU.vcxproj  main.cpp
IMU/IMU/x64/Debug/: IMU.exe.recipe  IMU.ilk  (+1 more)
IMUEncoder_Odometry/: IMUEncoder_Odometry.ino
KukMin_UNI_control_ver2/: KukMin_UNI_control_ver2.ino
KukMin_UNi_control/: KukMin_UNi_control.ino
L298N/: L298N.ino
Mando/20240520/: 20240520.sln
Mando/20240520/20240520/: 20240520.vcxproj
Mando/pointer/: pointer.sln
Mando/pointer/pointer/: main.cpp  pointer.vcxproj
Maze_runner1/: Maze_runner1.mp4.ino
MsTimer2/: MsTimer2.ino
N_Filter/: N_Filter.ino
Path_Plan/aa10_robot_navigator/: CMakeLists.txt  package.xml
Path_Plan/aa10_robot_navigator/data/: roi_speed_data(backup).txt  roi_speed_data.txt
Path_Plan/aa10_robot_navigator/launch/: aa10_robot_navigator.launch
Path_Plan/aa10_robot_navigator/scripts/: odom_path_node.py
Path_Plan/aa10_robot_navigator/src/: aa10_navigation_control.cpp
Processing/hello/: Planet.pde  Sun.pde  hello.pde
Processing/프로세싱 text 출력하기/hello_move/: hello_move.pde
Processing/프로세싱 text 출력하기/hello_move_again/: hello_move_again.pde
Processing/프로세싱 좌표 변환/house/: house.pde
Processing/프로세싱 좌표 변환/translate/: translate.pde
RC_Circuits/: RC_Circuits.ino
Servo_Motor/Servo_motor_90_1_/: Servo_motor_90_1_.ino
VLF_test/: VLF_test.ino
Y_Filter/: Y_Filter.ino
aa10_lidar_overtake_control/: CMakeLists.txt  package.xml
aa10_lidar_overtake_control/include/: obstacle_blob_processing.h
aa10_lidar_overtake_control/launch/: aa10_lidar_overtake_control.launch
aa10_lidar_overtake_control/rvzi/: aa10_lidar_obstacle.rviz
aa10_lidar_overtake_control/src/: aa10_lidar_overtake_control.cpp
car_control_i2c/car_control/: CMakeLists.txt  package.xml
car_control_i2c/car_control/launch/: m_car.launch
car_control_i2c/car_control/scripts/: teleop.py
car_control_i2c/car_control/src/: car_I2C_control_node.cpp
contorl_pid/: contorl_pid.ino
control_NFilter/: control_NFilter.ino
control_YFilter/: control_YFilter.ino
encoder/: encoder.ino
gyeongseong_sonar_angle/: sonar_angle.ino  소나 거리.txt
gyeongseong_sonar_angle/sonar_angle/: sonar_angle.ino
imu_encoder_camera/: imu_encoder_camera.ino
imu_end/: imu_end.ino
interrupt/interrupt/: interrupt.ino
line_sensor/: line_sensor.ino
line_tracking/: line_tracking.ino
maze/20230407/: L298N.pptx
maze/20230414/maze2/: maze2.ino
maze/20230418/maze3/: maze3.ino
maze_exam/: maze_exam.ino
maze_imu/maze_imu1/: maze_imu1.ino
maze_imu2/: maze_imu2.ino
maze_imu3/: maze_imu3.ino
odometry/: odometry.ino
servo_90/: servo_90.ino
voltage_divider_arduino/: voltage_divider_arduino.ino
(+20 files in other folders)
