
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} [OpenCV.cmake PATH])

cmake_minimum_required(VERSION 3.0.2)


project(aa10_lidar_overtake_control)

## Compile as C++11, supported in ROS Kinetic and newer
# add_compile_options(-std=c++11)

## Find catkin macros and libraries
## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
## is used, also find other catkin packages
find_package(catkin REQUIRED COMPONENTS
  geometry_msgs
  tf2_geometry_msgs
  nav_msgs
  roscpp
  rospy
  sensor_msgs
  std_msgs
  tf
  visualization_msgs
  laser_geometry
  pcl_conversions
  pcl_ros
  cv_bridge
  image_transport
)

find_package(OpenCV REQUIRED)

## System dependencies are found with CMake's conventions
# find_package(Boost REQUIRED COMPONENTS system)
# DEPENDS: system dependencies of this project that dependent projects also need
catkin_package(
  INCLUDE_DIRS include
  CATKIN_DEPENDS geometry_msgs tf2_geometry_msgs nav_msgs roscpp rospy sensor_msgs std_msgs tf visualization_msgs laser_geometry
  DEPENDS system_lib
  DEPENDS OpenCV
)

###########
## Build ##
###########

## Specify additional locations of header files
## Your package locations should be listed before other locations

include_directories(include)
include_directories(
 include
  ${catkin_INCLUDE_DIRS}
  ${OpenCV_INCLUDE_DIRS}
)


add_executable(aa10_lidar_overtake_control_node src/aa10_lidar_overtake_control.cpp)
add_dependencies(aa10_lidar_overtake_control_node ${aa10_lidar_overtake_control_node_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
target_link_libraries(aa10_lidar_overtake_control_node ${catkin_LIBRARIES}   ${OpenCV_LIBRARIES})

